--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,9 @@
 <!--pages/index/index.wxml-->
 <wxs src="../../common/utils/func/tools.wxs" module="tools"/>
 <wrapper nav-bar-class="theme-module-color">
-  <view slot="nav-bar-left" class="setting-icon">
+  <!-- <view slot="nav-bar-left" class="setting-icon">
     <i-icon type="other" size="33" />
-  </view>
+  </view> -->
   <view slot="nav-bar-middle" bindtap="tapToSearchPage">
     <search-bar disabled="{{false}}"/>
   </view>
@@ -14,34 +14,34 @@
       <card-swiper swiper-item-class="theme-radius theme-load-slot" indicatorColor="#fadbd9" indicatorActiveColor="{{themeColor}}" swiper-list="{{banner}}" catchtapitem="tapSwiperItem"/>
     </view>
     <!--功能导航-->
-    <view class="theme-module-color nav-icon-container">
+    <!-- <view class="theme-module-color nav-icon-container">
       <scroll-view scroll-x="true" class="nav-scroll-content-container" enable-flex>
         <view class="theme-margin-left {{index==7?'theme-margin-right':''}}" wx:for="{{[1,2,3,4,5,6,7,8]}}">
           <nav-icon size="100" />
         </view>
       </scroll-view>
-    </view>
+    </view> -->
     <!--个性化推荐歌单-->
     <view class="theme-module-color personal-song-sheet-recommend">
       <card card-title-class="theme-padding" card-title="推荐歌单" catchtapmore="tapMore">
-        <view class="{{index==0?'theme-margin-left':''}} {{index==6?'theme-margin-right':''}} square-card-margin-right" wx:for="{{personalRecommendMusicLists}}">
+        <view class="{{index==0?'theme-margin-left':''}} {{index==6?'theme-margin-right':''}} square-card-margin-right" wx:for="{{recommendSongLists}}">
           <personal-recommend-item item-id="{{item.id}}" thumb="{{item.cover}}" size="190" info="{{item.title}}"/>
         </view>
       </card>
     </view>
     <!--非个性化推荐歌单-->
     <view class="theme-module-color normal-song-sheet-recommend theme-module-margin flex-row theme-padding">
-      <recommend-card bindtapitem="tapNormalRecommend" item-id="{{normalRecommendMusicLists.hotList.id}}" title="{{normalRecommendMusicLists.hotList.title}}" songs-info="{{normalRecommendMusicLists.hotList.listInfos}}" recommend-card-class="theme-radius hotRe light bg-orange" content-class="normal-song-sheet-recommend-content" title-class="normal-song-sheet-recommend-title" />
+      <recommend-card bindtapitem="tapNormalRecommend" item-id="{{hotSongList.id}}" title="热门\n歌曲" songs-info="{{hotSongList.metaObject.songNames}}" recommend-card-class="theme-radius hotRe light bg-orange" content-class="normal-song-sheet-recommend-content" title-class="normal-song-sheet-recommend-title" />
       <view class="recommend-right-part flex-col">
-        <recommend-card bindtapitem="tapNormalRecommend" title="新歌推荐" recommend-card-class="theme-radius newRe light bg-blue" content-class="normal-song-sheet-recommend-content" title-class="normal-song-sheet-recommend-right-title" item-id="{{normalRecommendMusicLists.newList.id}}" title="{{normalRecommendMusicLists.newList.title}}" songs-info="{{normalRecommendMusicLists.newList.listInfos}}"/>
-        <recommend-card bindtapitem="tapNormalRecommend" title="随机歌单" recommend-card-class="theme-radius randomRe light bg-brown" songsInfo="{{[]}}" content-class="normal-song-sheet-recommend-content" title-class="normal-song-sheet-recommend-right-title" item-id="{{normalRecommendMusicLists.randomList.id}}" title="{{normalRecommendMusicLists.randomList.title}}" songs-info="{{normalRecommendMusicLists.randomList.listInfos}}"/>
+        <recommend-card bindtapitem="tapNormalRecommend" title="新歌推荐" recommend-card-class="theme-radius newRe light bg-blue" content-class="normal-song-sheet-recommend-content" title-class="normal-song-sheet-recommend-right-title" item-id="{{newSongList.id}}" songs-info="{{newSongList.metaObject.songNames}}"/>
+        <recommend-card bindtapitem="tapNormalRecommend" title="随机歌单" recommend-card-class="theme-radius randomRe light bg-brown" songs-info="{{[]}}" content-class="normal-song-sheet-recommend-content" title-class="normal-song-sheet-recommend-right-title" item-id="{{randomSongList.id}}"/>
       </view>
     </view>
     <!--根据常听的歌手推荐相关的歌曲-->
     <view class="theme-module-color theme-module-margin">
-      <card card-title-class="theme-padding" card-title="歌曲推荐" catchtapmore="tapMore">
-        <view wx:for="{{tools.getNumberArray(musicsBySinger.length/3)}}" class="flex-col music-cards-container {{index==0?'theme-margin-left':''}} {{index==2?'song-recommend-last-card-margin':''}} theme-margin-right" wx:fpr-item="it">
-          <music-card wx:for="{{[0,1,2]}}" size="120" cover="{{musicsBySinger[it*3+item].cover}}" sing-name="{{musicsBySinger[it*3+item].singName}}" singer-name="{{musicsBySinger[it*3+item].singerName}}" item-id="{{musicsBySinger[it*3+item].id}}"/>
+      <card card-title-class="theme-padding" card-title="歌曲推荐" enabelMore="{{false}}">
+        <view wx:for="{{tools.getNumberArray(recommendSongs.length/3)}}" class="flex-col music-cards-container {{index==0?'theme-margin-left':''}} {{index==2?'song-recommend-last-card-margin':''}} theme-margin-right" wx:for-item="it">
+          <music-card wx:for="{{[0,1,2]}}" size="120" cover="{{recommendSongs[it*3+item].cover}}" song-name="{{recommendSongs[it*3+item].songName}}" singer-name="{{recommendSongs[it*3+item].singerName}}" item-id="{{recommendSongs[it*3+item].id}}"/>
         </view>
       </card>
     </view>
@@ -49,7 +49,7 @@
     <view class="theme-module-color theme-module-margin">
       <card card-title-class="theme-padding" card-title="音乐人" catchtapmore="tapMore">
         <view wx:for="{{singers}}" class="circular-card-item {{index==0?'theme-margin-left':''}} {{index==4?'theme-margin-right':''}} circular-card-margin-right">
-          <circular-card-item size="170" cover="{{item.avator}}" message="{{item.singerName}}" item-id="{{item.id}}" catchtapitem="tapCircularItem" data-title="音乐人"/>
+          <circular-card-item size="170" cover="{{item.cover}}" message="{{item.name}}" item-id="{{item.id}}" catchtapitem="tapCircularItem" data-title="音乐人"/>
         </view>
       </card>
     </view>
@@ -57,7 +57,7 @@
     <view class="theme-module-color theme-module-margin">
       <card card-title-class="theme-padding" card-title="风格" catchtapmore="tapMore">
         <view wx:for="{{styles}}" class="circular-card-item {{index==0?'theme-margin-left':''}} {{index==4?'theme-margin-right':''}} circular-card-margin-right">
-          <circular-card-item size="170" cover="{{item.cover}}" message="{{item.style}}" item-id="{{item.id}}" data-title="风格" catchtapitem="tapCircularItem"/>
+          <circular-card-item size="170" cover="{{item.cover}}" message="{{item.name}}" item-id="{{item.id}}" data-title="风格" catchtapitem="tapCircularItem" is-message data-sub="{{item.name}}"/>
         </view>
       </card>
     </view>
@@ -65,7 +65,7 @@
     <view class="theme-module-color theme-module-margin">
       <card card-title-class="theme-padding" card-title="场景" catchtapmore="tapMore">
         <view wx:for="{{scenes}}" class="circular-card-item {{index==0?'theme-margin-left':''}} {{index==4?'theme-margin-right':''}} circular-card-margin-right">
-          <circular-card-item size="170" cover="{{item.cover}}" message="{{item.scene}}" item-id="{{item.id}}" data-title="场景" catchtapitem="tapCircularItem"/>
+          <circular-card-item size="170" cover="{{item.cover}}" message="{{item.name}}" item-id="{{item.id}}" data-title="场景" data-sub="{{item.name}}" catchtapitem="tapCircularItem" is-message message-circular-color="#87CEFA"/>
         </view>
       </card>
     </view>
