--- a/common/components/wrapper/wrapper.wxml
+++ b/common/components/wrapper/wrapper.wxml
@@ -25,7 +25,7 @@
   <!--底部评论条-->
   <view class="comment-bar-container theme-padding fixed-element" wx:if="{{mode=='comment'}}" style="bottom:{{commentInputBarBottom}}px">
     <!--编辑框-->
-    <textarea placeholder="{{!willReplyItem.info?'回复'+willReplyItem.userName+' :':'留下你此刻的想法吧~'}}" show-confirm-bar="{{false}}" adjust-position="{{false}}" confirm-type="done" placeholder-class="comment-placeholder" class="comment-input" bindfocus="focus" bindblur="blur" bindinput="inputChange" fixed focus="{{focus}}" value="{{inputValue}}"/>
+    <textarea placeholder="{{!willReplyItem.info?'回复'+willReplyItem.user.userName+' :':'留下你此刻的想法吧~'}}" show-confirm-bar="{{false}}" adjust-position="{{false}}" confirm-type="done" placeholder-class="comment-placeholder" class="comment-input" bindfocus="focus" bindblur="blur" bindinput="inputChange" fixed focus="{{focus}}" value="{{inputValue}}"/>
     <!--发送按钮-->
     <view class="send-button" bindtap="sendComment">发送</view>
   </view>
@@ -34,25 +34,25 @@
     <three-column-bar>
       <text slot="left" class="sum">总计</text>
       <text slot="middle" class="price">￥{{sumPrice}}</text>
-      <view slot="right" class="payment-button">确认支付</view>
+      <view slot="right" class="payment-button" bindtap="tapPay">确认支付</view>
     </three-column-bar>
   </view>
   <!--单曲批量操作页面底部操作条-->
-  <view wx:if="{{mode=='batchMusicItem' || mode=='batchMusicItemWithRemove'}}" class="batch-action-bar-container fixed-element">
+  <view wx:if="{{mode=='batchMusicItem' || mode=='batchMusicItemWithRemove' || mode=='batchMusicItemNotDownload'}}" class="batch-action-bar-container fixed-element">
     <view class="action-item" catchtap="tapAddNextSong" style="width:{{mode=='batchMusicItemWithRemove'?'25%':'33%'}}">
-      <i-icon type="offline" size="28" color="#333"/>
+      <i-icon type="play" size="28" color="#333"/>
       <text class="action-item-text">下一首播放</text>
     </view>
-    <view class="action-item" catchtap="tapAddToSongList" style="width:{{mode=='batchMusicItemWithRemove'?'25%':'33%'}}">
-      <i-icon type="offline" size="28" color="#333"/>
+    <view class="action-item" catchtap="tapAddToSongList" style="width:{{mode=='batchMusicItemWithRemove'|| mode=='batchMusicItemNotDownload'?'25%':'33%'}}">
+      <i-icon type="add" size="28" color="#333"/>
       <text class="action-item-text">加入歌单</text>
     </view>
-    <view class="action-item" catchtap="tapDownload" style="width:{{mode=='batchMusicItemWithRemove'?'25%':'33%'}}">
-      <i-icon type="offline" size="28" color="#333"/>
+    <view class="action-item" catchtap="tapDownload" style="width:{{mode=='batchMusicItemWithRemove' || mode=='batchMusicItemNotDownload'?'25%':'33%'}}" wx:if="{{mode!='batchMusicItemNotDownload'}}">
+      <i-icon type="unfold" size="28" color="#333"/>
       <text class="action-item-text">下载</text>
     </view>
-    <view class="action-item" catchtap="tapRemove" wx:if="{{mode=='batchMusicItemWithRemove'}}" style="width:{{mode=='batchMusicItemWithRemove'?'25%':'33%'}}">
-      <i-icon type="offline" size="28" color="#333"/>
+    <view class="action-item" catchtap="tapRemove" wx:if="{{mode=='batchMusicItemWithRemove' || mode=='batchMusicItemNotDownload'}}" style="width:{{mode=='batchMusicItemWithRemove'?'25%':'33%'}}">
+      <i-icon type="trash" size="28" color="#333"/>
       <text class="action-item-text">删除</text>
     </view>
   </view>
