--- a/pages/components/circular-card-item/circular-card-item.wxss
+++ b/pages/components/circular-card-item/circular-card-item.wxss
@@ -17,3 +17,13 @@
   border-width: 2rpx;
   margin-bottom: 12rpx;
 }
+.message-circular-container{
+  border-width: 2rpx;
+  margin-bottom: 12rpx;
+  overflow: hidden;
+  border-color: #eee;
+  border-style: solid;
+  color: #fff;
+  text-align: center;
+  letter-spacing: 2px;
+}
