--- a/subpackages-song-list/pages/song-list-detail/song-list-detail.wxml
+++ b/subpackages-song-list/pages/song-list-detail/song-list-detail.wxml
@@ -22,13 +22,16 @@
   <scroll-view scroll-y style="height:100%" slot="content" class="theme-module-color" bindscroll="scrolling" upper-threshold="8" scroll-with-animation bindscrolltoupper="scrolltoupper" hidden="{{searchState}}">
     <!--歌单信息-->
     <view class="theme-color song-list-bg-view theme-padding">
-      <song-list-item is-active="{{false}}" thumbSize="180" song-list-name-class="song-list-name" song-list-bottom-text-class="song-list-bottom-text" class="element-distance" src-url="{{musicListInfo.cover}}" top-title="{{musicListInfo.title}}" bottomTitle="{{musicListInfo.list.length+'首'}}"
+      <song-list-item is-active="{{false}}" thumbSize="180" song-list-name-class="song-list-name" song-list-bottom-text-class="song-list-bottom-text" class="element-distance" src-url="{{musicListInfo.cover}}" top-title="{{musicListInfo.title}}" bottom-title="{{musicListInfo.songs.length?musicListInfo.songs.length:0}}首"
       />
     </view>
     <!--操作板-->
     <view class="action-card theme-module-color flex-row" style="top:-{{actionCardHeight/2}}px">
       <i-icon type="{{musicListInfo.isCollect?'collection_fill':'collection'}}" color="{{musicListInfo.isCollect?themeColor:'#333'}}" size="24" style="border-right:1rpx solid #eee" catchtap="collect" wx:if="{{flag!=1}}" />
-      <i-icon type="message" size="24" style="border-right:1rpx solid #eee" catchtap="toComment"/>
+      <view catchtap="toComment" class="comment-container" wx:if="{{flag!=1}}">
+        <text class="comment-count">{{musicListInfo.commentCount}}</text>
+        <i-icon type="message" size="24"/>
+      </view>
       <button open-type="share" plain class="share-button">
         <i-icon type="share" size="24" />
       </button>
@@ -48,7 +51,7 @@
       <!--单曲列表-->
       <view style="margin-top: 40rpx">
         <view class="single-item" wx:for="{{sortData}}" wx:key="id" wx:if="{{sortData.length!=0}}">
-          <single-item item-id="{{item.id}}" sing-name="{{item.singName}}" singer-name="{{item.singerName}}" is-vip="{{item.isVip}}" flag="{{flag==1?1:2}}" catchremovemusic="removeMusic"/>
+          <single-item item-id="{{item.id}}" song-name="{{item.songName}}" singer-name="{{item.singerName}}" is-vip="{{item.isVip}}" flag="{{flag==1?1:2}}" catchremovemusic="removeMusic" cover="{{item.cover}}" url="{{item.url}}" bindmusicplayitemchange="musicPlayItemChangeInner"/>
         </view>
         <view wx:if="{{sortData.length==0}}" class="no-content">暂时还没有任何歌曲信息</view>
       </view>
@@ -61,9 +64,9 @@
       <!--单曲列表-->
       <view style="margin-top: 40rpx">
         <view class="single-item" wx:for="{{searchResult}}" wx:if="{{searchResult.length!=0}}">
-          <single-item item-id="{{item.id}}" sing-name="{{item.singName}}" singer-name="{{item.singerName}}" data-index="{{index}}" is-vip="{{item.isVip}}" comment-count="{{item.commentCount}}"/>
+          <single-item item-id="{{item.id}}" song-name="{{item.songName}}" singer-name="{{item.singerName}}" data-index="{{index}}" is-vip="{{item.isVip}}" comment-count="{{item.commentCount}}" cover="{{item.cover}}" url="{{item.url}}" bindmusicplayitemchange="musicPlayItemChangeInner" />
         </view>
-        <view class="no-search-result" wx:if="{{searchResult.length==0}}">未找到相关的内容</view>
+        <view class="no-search-result" wx:if="{{searchKey.length!=0 &&searchResult.length==0}}">未找到相关的内容</view>
       </view>
     </view>
   </scroll-view>
